--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"react-responsive-carousel": "^3.2.23",
 		"react-router-dom": "^6.15.0",
 		"react-scripts": "5.0.1",
+		"react-social-icons": "^5.15.0",
 		"sass": "^1.66.1",
 		"web-vitals": "^2.1.4"
 	},
