--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
 	"private": true,
 	"dependencies": {
 		"@emailjs/browser": "^3.11.0",
+		"@emotion/react": "^11.11.1",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
-		"formik": "^2.4.3",
 		"gsap": "^3.12.2",
 		"react": "^18.2.0",
+		"react-awesome-reveal": "^4.2.5",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.10.1",
 		"react-responsive-carousel": "^3.2.23",
-		"react-reveal": "^1.2.2",
 		"react-router-dom": "^6.15.0",
 		"react-scripts": "5.0.1",
 		"react-social-icons": "^5.15.0",
