--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"react": "^18.2.0",
 		"react-awesome-reveal": "^4.2.5",
 		"react-dom": "^18.2.0",
+		"react-headroom": "^3.2.1",
 		"react-icons": "^4.10.1",
 		"react-responsive-carousel": "^3.2.23",
 		"react-router-dom": "^6.15.0",
