--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react-scripts": "5.0.1",
 		"react-social-icons": "^5.15.0",
 		"sass": "^1.66.1",
+		"simplebar-react": "^3.2.4",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
