--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"react-social-icons": "^5.15.0",
 		"sass": "^1.66.1",
 		"simplebar-react": "^3.2.4",
-		"web-vitals": "^2.1.4"
+		"web-vitals": "^2.1.4",
+		"yet-another-react-lightbox": "^3.13.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
