--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"react-router-dom": "^6.15.0",
 		"react-scripts": "5.0.1",
 		"react-social-icons": "^5.15.0",
+		"react-typed": "^1.2.0",
 		"sass": "^1.66.1",
 		"simplebar-react": "^3.2.4",
 		"web-vitals": "^2.1.4",
