--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"react-dom": "^18.2.0",
 		"react-headroom": "^3.2.1",
 		"react-icons": "^4.10.1",
+		"react-lazy-load-image-component": "^1.6.0",
 		"react-responsive-carousel": "^3.2.23",
 		"react-router-dom": "^6.15.0",
 		"react-scripts": "5.0.1",
