added new font weight and changed css theme colours

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "web-app",
 	"version": "0.1.0",
-	"homepage": "https://www.felipegonzalez.ca",
+	"homepage": "https://psyout.github.io/new-portfolio",
 	"private": true,
 	"dependencies": {
 		"@emailjs/browser": "^3.11.0",
@@ -27,6 +27,8 @@
 	},
 	"scripts": {
 		"start": "react-scripts start",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
 		"build": "CI= react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
@@ -50,6 +52,7 @@
 		]
 	},
 	"devDependencies": {
-		"@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+		"gh-pages": "^6.1.1"
 	}
 }
