--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"blurhash": "^2.0.5",
 		"gsap": "^3.12.2",
 		"react": "^18.2.0",
 		"react-awesome-reveal": "^4.2.5",
+		"react-blurhash": "^0.3.0",
 		"react-dom": "^18.2.0",
 		"react-headroom": "^3.2.1",
 		"react-icons": "^4.10.1",
