--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"blurhash": "^2.0.5",
+		"framer-motion": "^11.0.20",
 		"gsap": "^3.12.2",
 		"react": "^18.2.0",
 		"react-awesome-reveal": "^4.2.5",
@@ -17,6 +18,7 @@
 		"react-dom": "^18.2.0",
 		"react-headroom": "^3.2.1",
 		"react-icons": "^4.10.1",
+		"react-multi-carousel": "^2.8.4",
 		"react-responsive-carousel": "^3.2.23",
 		"react-router-dom": "^6.15.0",
 		"react-scripts": "5.0.1",
