--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "web-app",
 	"version": "0.1.0",
-	"homepage": "https://felipegonzalez.ca",
+	"homepage": "https://felipegonzalez.io",
 	"private": true,
 	"dependencies": {
 		"@emailjs/browser": "^3.11.0",
@@ -12,6 +12,7 @@
 		"blurhash": "^2.0.5",
 		"framer-motion": "^11.0.20",
 		"gsap": "^3.12.2",
+		"motion": "^11.16.0",
 		"react": "^18.2.0",
 		"react-awesome-reveal": "^4.2.5",
 		"react-blurhash": "^0.3.0",
@@ -23,9 +24,9 @@
 		"react-router-dom": "^6.15.0",
 		"react-scripts": "5.0.1",
 		"react-social-icons": "^5.15.0",
+		"react-type-animation": "^3.2.0",
 		"sass": "^1.66.1",
 		"simplebar-react": "^3.2.4",
-		"typed.js": "^2.0.16",
 		"web-vitals": "^2.1.4",
 		"yet-another-react-lightbox": "^3.13.0"
 	},
