--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"framer-motion": "^11.0.20",
 		"gsap": "^3.12.2",
 		"motion": "^11.16.0",
+		"primereact": "^10.9.1",
 		"react": "^18.2.0",
 		"react-awesome-reveal": "^4.2.5",
 		"react-blurhash": "^0.3.0",
