--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"private": true,
 	"dependencies": {
 		"@emailjs/browser": "^3.11.0",
-		"@emotion/react": "^11.11.1",
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.0",
+		"@mui/material": "^7.0.0",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
@@ -13,14 +15,12 @@
 		"framer-motion": "^11.0.20",
 		"gsap": "^3.12.2",
 		"motion": "^11.16.0",
-		"primereact": "^10.9.1",
 		"react": "^18.2.0",
 		"react-awesome-reveal": "^4.2.5",
 		"react-blurhash": "^0.3.0",
 		"react-dom": "^18.2.0",
 		"react-headroom": "^3.2.1",
 		"react-icons": "^4.10.1",
-		"react-multi-carousel": "^2.8.4",
 		"react-responsive-carousel": "^3.2.23",
 		"react-router-dom": "^6.15.0",
 		"react-scripts": "5.0.1",
@@ -28,6 +28,7 @@
 		"react-type-animation": "^3.2.0",
 		"sass": "^1.66.1",
 		"simplebar-react": "^3.2.4",
+		"swiper": "^11.2.1",
 		"web-vitals": "^2.1.4",
 		"yet-another-react-lightbox": "^3.13.0"
 	},
